Updated finaly today

--- a/SFML TEMP.vcxproj
+++ b/SFML TEMP.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="Ant.cpp" />
     <ClCompile Include="Anthill.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="Informers.cpp" />
     <ClCompile Include="MAIN.cpp" />
     <ClCompile Include="Resource.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="Anthill.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game Settings.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="Informers.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="Resource.h" />
