--- a/SFML TEMP.vcxproj
+++ b/SFML TEMP.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Informers.cpp" />
     <ClCompile Include="MAIN.cpp" />
+    <ClCompile Include="Raid.cpp" />
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="Role.cpp" />
   </ItemGroup>
@@ -150,6 +151,7 @@
     <ClInclude Include="Ant.h" />
     <ClInclude Include="Anthill.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Raid.h" />
     <ClInclude Include="Game Settings.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Informers.h" />
