--- a/SFML TEMP.vcxproj
+++ b/SFML TEMP.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Raid.cpp" />
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="Role.cpp" />
+    <ClCompile Include="Tlya.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ant.h" />
@@ -158,6 +159,7 @@
     <ClInclude Include="Position.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Role.h" />
+    <ClInclude Include="Tlya.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
