--- a/SFML TEMP.vcxproj
+++ b/SFML TEMP.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClCompile Include="Ant.cpp" />
     <ClCompile Include="Anthill.cpp" />
+    <ClCompile Include="Cemetery.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -152,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="Ant.h" />
     <ClInclude Include="Anthill.h" />
+    <ClInclude Include="Cemetery.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Raid.h" />
