--- a/ANTHILL.vcxproj
+++ b/ANTHILL.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -18,11 +18,43 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ant.h" />
+    <ClInclude Include="Anthill.h" />
+    <ClInclude Include="Cemetery.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Game Settings.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="Informers.h" />
+    <ClInclude Include="Position.h" />
+    <ClInclude Include="Raid.h" />
+    <ClInclude Include="Resource.h" />
+    <ClInclude Include="Role.h" />
+    <ClInclude Include="Tlya.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Ant.cpp" />
+    <ClCompile Include="Anthill.cpp" />
+    <ClCompile Include="Cemetery.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Informers.cpp" />
+    <ClCompile Include="MAIN.cpp" />
+    <ClCompile Include="Raid.cpp" />
+    <ClCompile Include="Resource.cpp" />
+    <ClCompile Include="Role.cpp" />
+    <ClCompile Include="Tlya.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{e9b2c72b-6da3-43b8-8a7c-90d2b674cca9}</ProjectGuid>
-    <RootNamespace>SFMLTEMP</RootNamespace>
+    <ProjectGuid>{d5875de6-b354-4841-855f-8b6ebe211cb4}</ProjectGuid>
+    <RootNamespace>ANTHILL</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -105,12 +137,12 @@
       <PreprocessorDefinitions>SFML_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>C:\Users\Dmitriy\Downloads\SFML-2.6.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\C++ Libraries\SFML-2.6.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Dmitriy\Downloads\SFML-2.6.2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\C++ Libraries\SFML-2.6.2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-system-s-d.lib;sfml-window-s-d.lib;sfml-network-s-d.lib;sfml-audio-s-d.lib;sfml-graphics-s-d.lib;opengl32.lib;openal32.lib;ws2_32.lib;winmm.lib;ogg.lib;vorbis.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;freetype.lib;gdi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
@@ -121,47 +153,16 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>SFML_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Dmitriy\Downloads\SFML-2.6.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Dmitriy\Downloads\SFML-2.6.2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
-      <AdditionalDependencies>sfml-system-s.lib;sfml-window-s.lib;sfml-network-s.lib;sfml-audio-s.lib;sfml-graphics-s.lib;opengl32.lib;openal32.lib;ws2_32.lib;winmm.lib;ogg.lib;vorbis.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;freetype.lib;gdi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Ant.cpp" />
-    <ClCompile Include="Anthill.cpp" />
-    <ClCompile Include="Enemy.cpp" />
-    <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Informers.cpp" />
-    <ClCompile Include="MAIN.cpp" />
-    <ClCompile Include="Raid.cpp" />
-    <ClCompile Include="Resource.cpp" />
-    <ClCompile Include="Role.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Ant.h" />
-    <ClInclude Include="Anthill.h" />
-    <ClInclude Include="Enemy.h" />
-    <ClInclude Include="Raid.h" />
-    <ClInclude Include="Game Settings.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="Informers.h" />
-    <ClInclude Include="Position.h" />
-    <ClInclude Include="Resource.h" />
-    <ClInclude Include="Role.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
