--- a/SFML TEMP.vcxproj
+++ b/SFML TEMP.vcxproj
@@ -139,18 +139,23 @@
   <ItemGroup>
     <ClCompile Include="Ant.cpp" />
     <ClCompile Include="Anthill.cpp" />
+    <ClCompile Include="Cemetery.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Informers.cpp" />
     <ClCompile Include="MAIN.cpp" />
     <ClCompile Include="Raid.cpp" />
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="Role.cpp" />
+    <ClCompile Include="Tlya.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ant.h" />
     <ClInclude Include="Anthill.h" />
+    <ClInclude Include="Cemetery.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="Raid.h" />
     <ClInclude Include="Game Settings.h" />
     <ClInclude Include="Game.h" />
@@ -158,6 +163,7 @@
     <ClInclude Include="Position.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Role.h" />
+    <ClInclude Include="Tlya.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
